Finished the scanner and added some comments.